# ModFS

./: .gitignore  ModFS_Plan.md  ModFS_linux_1.0.0-9_amd64.deb.sig  README.md  SHA512SUMS  macos_setup.sh  meson.build  public.key  pubspec.yaml  release_notes.md  test_c  test_c.c  test_crash.dart  test_excludes  test_excludes.c  test_ffi.dart  test_init.dart  test_nullptr.dart  test_run.dart  test_uninit_search  test_uninit_search.c
Audit/: SBOM_ModFS_Linux.txt  modfs_snyk_report.md  sbom.json  vulnerabilities.txt
ModFSMacDocs/: ModFS_MacOS_User_Guide.md
deb_dist/DEBIAN/: control
deb_dist/opt/modfs/data/flutter_assets/: version.json
deb_dist/usr/share/applications/: modfs.desktop
debian/: com.example.modfs.desktop
extracted_deb/opt/modfs/: modfs
extracted_deb/opt/modfs/data/flutter_assets/: NOTICES.Z  version.json
lib/: ffi.dart  logger.dart  main.dart  version.dart
linbld/: ModFS_Linux_Guide.md  ModFS_linux_1.0.0-13_amd64.deb.asc  ModFS_linux_1.0.0-14_amd64.deb.asc  ModFS_linux_1.0.0-15_amd64.deb.asc  SHA512SUMS
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
plan/: ModFSPlan.md
scripts/: package_linux.sh
src/: fsearch_array.c  fsearch_database.c  fsearch_window.ui  meson.build  modfs_ffi.c  modfs_ffi.h  shared.css
src/gtk_archive/: main.c
src/test_build/: config.h  fsearch_database.c
test/: widget_test.dart
